--- a/styles.css
+++ b/styles.css
@@ -221,7 +221,7 @@ margin-bottom: 0
     top: 14px;
     left: -22px;
     width: 3px;
-    height: 170px;
+    height: 248px;
     background: #15b5a9;}
 
 .resume .resume_right .resume_education ul li:after {
@@ -230,8 +230,12 @@ margin-bottom: 0
     top: 14px;
     left: -22px;
     width: 3px;
-    height: 85px;
+    height: 104px;
     background: #15b5a9;}
+
+.resume .resume_right .resume_education ul li .info2:after {
+    height: 150px;
+}
 
 .fun {
     border-radius: 12px;
@@ -263,7 +267,7 @@ a:visited {
     text-decoration:none
 }
 a:hover {
-    color: beige;
+    color: #d3d3c6;
     font-weight:bold;
     text-decoration:none}
 
